--- a/pages/three/fundamentals.mdx
+++ b/pages/three/fundamentals.mdx
@@ -10,7 +10,7 @@ import AddGeometryS5 from '../../data/three/fundamentals/s5.mdx'
 人们在学习大多数编程语言的时候第一件事就是让电脑打印个"Hello World!"。 对于三维来说第一件事往往是创
 建一个三维的立方体。 所以我们从"Hello Cube!"开始。
 
-在我们开始前，让我们试着让你了解一下一个 three.js 应用的整体结构。一个 three.js 应用需要创建很多对象
+在我们开始前，让我们先了解一个 three.js 应用的整体结构。一个 three.js 应用需要创建很多对象
 ，并且将他们关联在一起。下图是一个基础的 three.js 应用结构。
 
 ![Three.js应用结构](https://threejs.org/manual/resources/images/threejs-structure.svg)
