✨ feat: update layout

--- a/docs/reverse-text-color.mdx
+++ b/docs/reverse-text-color.mdx
@@ -1,3 +1,8 @@
+---
+title: css 根据背景色自动调整文字颜色
+en: Reverse Text Color Based on Background Color Automatically in CSS
+---
+
 <CH.Scrollycoding preset="https://codesandbox.io/s/7wt1zq">
 
 ## css 滤镜
