--- a/docs/reverse-text-color.mdx
+++ b/docs/reverse-text-color.mdx
@@ -1,6 +1,7 @@
 ---
 title: css 根据背景色自动调整文字颜色
 en: Reverse Text Color Based on Background Color Automatically in CSS
+index: 1
 ---
 
 <CH.Scrollycoding preset="https://codesandbox.io/s/7wt1zq">
