--- a/doc-framework/ui.mdx
+++ b/doc-framework/ui.mdx
@@ -28,9 +28,25 @@ date: 2023/01/05
 - 原始 HTML
 - 属性绑定
 - class 和 style 绑定
-- JavaScript 表达式
 - 条件渲染
 - 列表渲染 & Key
 - 事件处理
 - 表单输入绑定
 - DOM 引用
+
+
+
+- 大小写区分
+
+HTML 标签和属性名称是不分大小写的，所以浏览器会把任何大写的字符解释为小写
+
+- 闭合标签
+
+
+
+- 根元素数量
+
+Vue2 中**每个组件必须只有一个根元素**
+Vue3 可以存在多个根元素
+React 中每个组件必须只有一个根元素, 一般使用 `Fragment(<></>)` 来解决这个问题
+Angular 可以存在多个根元素
