--- a/doc-framework/ui.mdx
+++ b/doc-framework/ui.mdx
@@ -21,6 +21,7 @@ date: 2023/01/05
 - 在 vue 中, template 相对于 JSX 会有性能优势
 - react 中的 JSX 和 vue 的 template 都会被 babel 编译为一个渲染函数
 - vue2 和 Angular 通过 「管道」和 「指令」来增强 template 的能力
+- Angular 中 「指令」的能力更强大，但是也更复杂
 
 主要内容
 
