--- a/pages/three-js/fundamentals.mdx
+++ b/pages/three-js/fundamentals.mdx
@@ -1,4 +1,4 @@
-import AddGeometryS5 from '../data/three/fundamentals/s5.mdx'
+import AddGeometryS5 from './data/three/fundamentals/s5.mdx'
 
 ## Hello Three.js
 
