--- a/pages/three-js/basic-component.mdx
+++ b/pages/three-js/basic-component.mdx
@@ -53,7 +53,7 @@ camera.lookAt(0, 0, 0)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s1.js
+// from ../../three-demo/scenegraph/s1.js
 ```
 
 ---
@@ -74,7 +74,7 @@ let sphereGeometry
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s2.js
+// from ../../three-demo/scenegraph/s2.js
 ```
 
 ---
@@ -99,7 +99,7 @@ objects.push(sunMesh)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s3.js
+// from ../../three-demo/scenegraph/s3.js
 ```
 
 ---
@@ -121,7 +121,7 @@ scene.add(helper)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s4.js
+// from ../../three-demo/scenegraph/s4.js
 ```
 
 ---
@@ -141,7 +141,7 @@ objects.forEach((obj) => {
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s5.js
+// from ../../three-demo/scenegraph/s5.js
 ```
 
 ---
@@ -165,7 +165,7 @@ objects.push(earthMesh)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s6.js
+// from ../../three-demo/scenegraph/s6.js
 ```
 
 ---
@@ -188,7 +188,7 @@ objects.push(earthMesh)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s7.js
+// from ../../three-demo/scenegraph/s7.js
 ```
 
 ---
@@ -209,7 +209,7 @@ objects.push(solarSystem)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s8.js
+// from ../../three-demo/scenegraph/s8.js
 ```
 
 ---
@@ -233,7 +233,7 @@ objects.push(moonMesh)
 
 </CH.Section>
 ```js src/index.js
-// from ./data/scenegraph/s9.js
+// from ../../three-demo/scenegraph/s9.js
 ```
 
 ---
@@ -253,7 +253,7 @@ objects.push(moonMesh)
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s10.js
+// from ../../three-demo/scenegraph/s10.js
 ```
 
 ---
@@ -281,7 +281,7 @@ scene.background = bgTexture;
 </CH.Section>
 
 ```js src/index.js
-// from ./data/scenegraph/s11.js
+// from ../../three-demo/scenegraph/s11.js
 ```
 
 </CH.Scrollycoding>
